fixed swagger documentation bugs in personalize feed
